elixir/force-app/main/default/objects/Account/fields/loan__Interest_Reinvested_Till_Date__c.field-meta.xml
<CustomField>
    <fullName>loan__Interest_Reinvested_Till_Date__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Interest Reinvested Till Date</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>