elixir/force-app/main/default/objects/Account/fields/loan__Investor__c.field-meta.xml
<CustomField>
    <fullName>loan__Investor__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Investor</label>
    <type>Checkbox</type>
</CustomField>