elixir/force-app/main/default/objects/Account/fields/loan__Investor_Tax_Configuration__c.field-meta.xml
<CustomField>
    <fullName>loan__Investor_Tax_Configuration__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Investor Tax Configuration</label>
    <referenceTo>loan__Investor_Tax_Configuration__c</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>