elixir/force-app/main/default/objects/Account/fields/loan__Priority__c.field-meta.xml
<CustomField>
    <fullName>loan__Priority__c</fullName>
    <description>Priority of the investor in which the investor payment should be processed.</description>
    <inlineHelpText>Priority of the investor in which the investor payment should be processed.</inlineHelpText>
    <label>Priority</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>