elixir/force-app/main/default/objects/Account/fields/loan__Reinvest_Principal__c.field-meta.xml
<CustomField>
    <fullName>loan__Reinvest_Principal__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Reinvest Principal</label>
    <type>Checkbox</type>
</CustomField>