elixir/force-app/main/default/objects/Account/fields/loan__Service_Rate_On_Investment__c.field-meta.xml
<CustomField>
    <fullName>loan__Service_Rate_On_Investment__c</fullName>
    <defaultValue>$Setup.loan__Fractionalization_Parameters__c.loan__Default_Service_Rate__c</defaultValue>
    <inlineHelpText>Default service rate on investor&#39;s investments</inlineHelpText>
    <label>Service Rate On Investment</label>
    <precision>7</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>