elixir/force-app/main/default/objects/Account/fields/loan__SLAExpirationDate__c.field-meta.xml
<CustomField>
    <fullName>loan__SLAExpirationDate__c</fullName>
    <label>SLA Expiration Date (DEPRECATED)</label>
    <type>Date</type>
</CustomField>