elixir/force-app/main/default/objects/Account/fields/loan__SLASerialNumber__c.field-meta.xml
<CustomField>
    <fullName>loan__SLASerialNumber__c</fullName>
    <label>SLA Serial Number (DEPRECATED)</label>
    <length>10</length>
    <type>Text</type>
</CustomField>