elixir/force-app/main/default/objects/Account/fields/loan__Total_Invested_Amount__c.field-meta.xml
<CustomField>
    <fullName>loan__Total_Invested_Amount__c</fullName>
    <defaultValue>0.00</defaultValue>
    <description>Total amount invested by the investor on all the loans.</description>
    <inlineHelpText>Total amount invested by the investor on all the loans.</inlineHelpText>
    <label>Total Invested Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>