elixir/force-app/main/default/objects/Account/fields/loan__Total_Pay_Off_Amount__c.field-meta.xml
<CustomField>
    <fullName>loan__Total_Pay_Off_Amount__c</fullName>
    <defaultValue>0</defaultValue>
    <description>This field gives the total pay-off amount as of today.</description>
    <inlineHelpText>This is the total pay-off amount of all loans as of today.</inlineHelpText>
    <label>Total Pay Off Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>