elixir/force-app/main/default/objects/Account/fields/loan__Uncleared_Withdrawals__c.field-meta.xml
<CustomField>
    <fullName>loan__Uncleared_Withdrawals__c</fullName>
    <label>Uncleared Withdrawals</label>
    <summarizedField>loan__Investor_Fund_Transaction__c.loan__Transaction_Amount__c</summarizedField>
    <summaryFilterItems>
        <field>loan__Investor_Fund_Transaction__c.loan__Transaction_Amount__c</field>
        <operation>lessOrEqual</operation>
        <value>0</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>loan__Investor_Fund_Transaction__c.loan__Cleared__c</field>
        <operation>equals</operation>
        <value>False</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>loan__Investor_Fund_Transaction__c.loan__Rejected__c</field>
        <operation>equals</operation>
        <value>False</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>loan__Investor_Fund_Transaction__c.loan__Reversed__c</field>
        <operation>equals</operation>
        <value>False</value>
    </summaryFilterItems>
    <summaryForeignKey>loan__Investor_Fund_Transaction__c.loan__Account__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>