elixir/force-app/main/default/objects/Account/fields/Membership_Number__c.field-meta.xml
<CustomField>
    <fullName>Membership_Number__c</fullName>
    <label>Membership Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>