elixir/force-app/main/default/objects/Account/fields/Membership_Verified__c.field-meta.xml
<CustomField>
    <fullName>Membership_Verified__c</fullName>
    <label>Membership Verified</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>