elixir/force-app/main/default/objects/Account/fields/No_of_Directors__c.field-meta.xml
<CustomField>
    <fullName>No_of_Directors__c</fullName>
    <label>No of Directors</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>