elixir/force-app/main/default/objects/Account/fields/Number_of_years_at_address__c.field-meta.xml
<CustomField>
    <fullName>Number_of_years_at_address__c</fullName>
    <label>Number of years at address</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>