elixir/force-app/main/default/objects/Account/fields/Office_Phone__c.field-meta.xml
<CustomField>
    <fullName>Office_Phone__c</fullName>
    <label>Office Phone</label>
    <type>Phone</type>
</CustomField>