elixir/force-app/main/default/objects/Account/fields/peer__Access_Token__c.field-meta.xml
<CustomField>
    <fullName>peer__Access_Token__c</fullName>
    <label>Access Token</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>