elixir/force-app/main/default/objects/Account/fields/peer__Amount_In_Funding__c.field-meta.xml
<CustomField>
    <fullName>peer__Amount_In_Funding__c</fullName>
    <label>Amount In Funding</label>
    <summarizedField>peer__Booking_Order__c.peer__Amount_In_Funding__c</summarizedField>
    <summaryForeignKey>peer__Booking_Order__c.peer__Investor__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>