elixir/force-app/main/default/objects/Account/fields/peer__Borrower_Exposure_Limit_Amount__c.field-meta.xml
<CustomField>
    <fullName>peer__Borrower_Exposure_Limit_Amount__c</fullName>
    <formula>peer__Borrower_Exposure_Percentage__c * peer__Portfolio_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Borrower Exposure Limit Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>