elixir/force-app/main/default/objects/Account/fields/peer__FB_Access_Token__c.field-meta.xml
<CustomField>
    <fullName>peer__FB_Access_Token__c</fullName>
    <label>FB Access Token</label>
    <length>255</length>
    <type>Text</type>
</CustomField>