elixir/force-app/main/default/objects/Account/fields/peer__FB_Image__c.field-meta.xml
<CustomField>
    <fullName>peer__FB_Image__c</fullName>
    <description>URL of user&#39;s Facebook Image</description>
    <label>FB Image</label>
    <type>Url</type>
</CustomField>