elixir/force-app/main/default/objects/Account/fields/peer__Funds_Available_For_Investment__c.field-meta.xml
<CustomField>
    <fullName>peer__Funds_Available_For_Investment__c</fullName>
    <formula>if( loan__Undeployed_Funds__c != 0,(loan__Undeployed_Funds__c  -  peer__Amount_In_Funding__c ),0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Amount available for further investments.</inlineHelpText>
    <label>Uncommitted Funds</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>