elixir/force-app/main/default/objects/Account/fields/peer__Funds_In_Queue__c.field-meta.xml
<CustomField>
    <fullName>peer__Funds_In_Queue__c</fullName>
    <label>Funds In Queue</label>
    <summarizedField>peer__Investment_Queue__c.peer__Amount__c</summarizedField>
    <summaryFilterItems>
        <field>peer__Investment_Queue__c.peer__Invested__c</field>
        <operation>equals</operation>
        <value>False</value>
    </summaryFilterItems>
    <summaryForeignKey>peer__Investment_Queue__c.peer__Account__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>