elixir/force-app/main/default/objects/Account/fields/peer__Investor_Status__c.field-meta.xml
<CustomField>
    <fullName>peer__Investor_Status__c</fullName>
    <label>Investor Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>NA</fullName>
                <default>true</default>
                <label>NA</label>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Verified</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>