elixir/force-app/main/default/objects/Account/fields/peer__IsActiveBorrower__c.field-meta.xml
<CustomField>
    <fullName>peer__IsActiveBorrower__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsActiveBorrower</label>
    <type>Checkbox</type>
</CustomField>