elixir/force-app/main/default/objects/Account/fields/peer__Last_Name__c.field-meta.xml
<CustomField>
    <fullName>peer__Last_Name__c</fullName>
    <label>Last Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>