elixir/force-app/main/default/objects/Account/fields/peer__Loan_Term_Frequency__c.field-meta.xml
<CustomField>
    <fullName>peer__Loan_Term_Frequency__c</fullName>
    <inlineHelpText>If Years are selected, the maximum loan term will be considered as number of years. If Contract Frequency is selected, the maximum loan term will be counted by the number of terms as per the frequency of the contract in which the investor is investing.</inlineHelpText>
    <label>Loan Term Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Years</fullName>
            </value>
            <value>
                <fullName>Contract Frequency</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>