elixir/force-app/main/default/objects/Account/fields/peer__Maximum_Loan_Term__c.field-meta.xml
<CustomField>
    <fullName>peer__Maximum_Loan_Term__c</fullName>
    <label>Maximum Loan Term</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>