elixir/force-app/main/default/objects/Account/fields/peer__National_Id__c.field-meta.xml
<CustomField>
    <fullName>peer__National_Id__c</fullName>
    <label>National Id</label>
    <length>50</length>
    <maskChar>X</maskChar>
    <maskType>lastFour</maskType>
    <type>EncryptedText</type>
</CustomField>