elixir/force-app/main/default/objects/Account/fields/peer__Nickname__c.field-meta.xml
<CustomField>
    <fullName>peer__Nickname__c</fullName>
    <label>Nickname</label>
    <length>255</length>
    <type>Text</type>
</CustomField>