elixir/force-app/main/default/objects/Account/fields/peer__Password__c.field-meta.xml
<CustomField>
    <fullName>peer__Password__c</fullName>
    <label>Password</label>
    <length>30</length>
    <type>Text</type>
</CustomField>