elixir/force-app/main/default/objects/Account/fields/peer__Portfolio_Generated_Per_Hour__c.field-meta.xml
<CustomField>
    <fullName>peer__Portfolio_Generated_Per_Hour__c</fullName>
    <label>Portfolio Generated Per Hour</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>