elixir/force-app/main/default/objects/Account/fields/peer__Verified__c.field-meta.xml
<CustomField>
    <fullName>peer__Verified__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Verified</label>
    <type>Checkbox</type>
</CustomField>