elixir/force-app/main/default/objects/Account/fields/peer__Verified_img__c.field-meta.xml
<CustomField>
    <fullName>peer__Verified_img__c</fullName>
    <formula>IF (peer__Verified__c, IMAGE(&quot;/img/msg_icons/confirm32.png&quot;, &quot;Verified&quot;),
     IMAGE(&quot;/img/msg_icons/warning32.png&quot;, &quot;Unverified&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Verified</label>
    <type>Text</type>
</CustomField>