elixir/force-app/main/default/objects/Account/fields/Policy_Expiry_Date__c.field-meta.xml
<CustomField>
    <fullName>Policy_Expiry_Date__c</fullName>
    <label>Policy Expiry Date</label>
    <type>Date</type>
</CustomField>