elixir/force-app/main/default/objects/Account/fields/Property_Corporate_Trustee_Name__c.field-meta.xml
<CustomField>
    <fullName>Property_Corporate_Trustee_Name__c</fullName>
    <label>Property Corporate Trustee Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>