elixir/force-app/main/default/objects/Account/fields/Property_Corporate_Trustee_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Property_Corporate_Trustee_Start_Date__c</fullName>
    <label>Property Corporate Trustee Start Date</label>
    <type>Date</type>
</CustomField>