elixir/force-app/main/default/objects/Account/fields/Property_Trust_ABN__c.field-meta.xml
<CustomField>
    <fullName>Property_Trust_ABN__c</fullName>
    <label>Property Trust ABN</label>
    <length>255</length>
    <type>Text</type>
</CustomField>