elixir/force-app/main/default/objects/Account/fields/Property_Trust_Name__c.field-meta.xml
<CustomField>
    <fullName>Property_Trust_Name__c</fullName>
    <label>Property Trust Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>