elixir/force-app/main/default/objects/Account/fields/Property_Trust_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Property_Trust_Start_Date__c</fullName>
    <label>Property Trust Start Date</label>
    <type>Date</type>
</CustomField>