elixir/force-app/main/default/objects/Account/fields/Read_and_Accept_Privacy_Policy__c.field-meta.xml
<CustomField>
    <fullName>Read_and_Accept_Privacy_Policy__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Read and Accept Privacy Policy</label>
    <type>Checkbox</type>
</CustomField>