elixir/force-app/main/default/objects/Account/fields/Sales_Channel_Type__c.field-meta.xml
<CustomField>
    <fullName>Sales_Channel_Type__c</fullName>
    <label>Sales Channel Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Direct</fullName>
            </value>
            <value>
                <fullName>Mortgage Broker</fullName>
            </value>
            <value>
                <fullName>Mortgage Manager</fullName>
            </value>
            <value>
                <fullName>Online Channel</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>