elixir/force-app/main/default/objects/Account/fields/Shipping_Address_Street_Type__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Address_Street_Type__c</fullName>
    <label>Shipping Address Street Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>