elixir/force-app/main/default/objects/Account/fields/SMSF_Corporate_Trustee_Name__c.field-meta.xml
<CustomField>
    <fullName>SMSF_Corporate_Trustee_Name__c</fullName>
    <label>SMSF Corporate Trustee Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>