elixir/force-app/main/default/objects/Account/fields/SMSF_Corporate_Trustee_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>SMSF_Corporate_Trustee_Start_Date__c</fullName>
    <label>SMSF Corporate Trustee Start Date</label>
    <type>Date</type>
</CustomField>