elixir/force-app/main/default/objects/Account/fields/SMSF_Trust_Name__c.field-meta.xml
<CustomField>
    <fullName>SMSF_Trust_Name__c</fullName>
    <label>SMSF Trust Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>