elixir/force-app/main/default/objects/Account/fields/SMSF_Trust_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>SMSF_Trust_Start_Date__c</fullName>
    <label>SMSF Trust Start Date</label>
    <type>Date</type>
</CustomField>