elixir/force-app/main/default/objects/Account/fields/Status_Updates__c.field-meta.xml
<CustomField>
    <fullName>Status_Updates__c</fullName>
    <label>Status Updates</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Mobile</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>