elixir/force-app/main/default/objects/Account/fields/Terms_And_Conditions_Of_PDS__c.field-meta.xml
<CustomField>
    <fullName>Terms_And_Conditions_Of_PDS__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Terms And Conditions Of PDS</label>
    <type>Checkbox</type>
</CustomField>