elixir/force-app/main/default/objects/Account/fields/TFN_Number__c.field-meta.xml
<CustomField>
    <fullName>TFN_Number__c</fullName>
    <label>TFN Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>