elixir/force-app/main/default/objects/Account/fields/Trading_address_City__c.field-meta.xml
<CustomField>
    <fullName>Trading_address_City__c</fullName>
    <label>Trading address City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>