elixir/force-app/main/default/objects/Account/fields/Trading_address_Country__c.field-meta.xml
<CustomField>
    <fullName>Trading_address_Country__c</fullName>
    <label>Trading address Country</label>
    <length>255</length>
    <type>Text</type>
</CustomField>