elixir/force-app/main/default/objects/Account/fields/Trading_address_State__c.field-meta.xml
<CustomField>
    <fullName>Trading_address_State__c</fullName>
    <label>Trading address State</label>
    <length>255</length>
    <type>Text</type>
</CustomField>