elixir/force-app/main/default/objects/Account/fields/Trading_address_Street_N0__c.field-meta.xml
<CustomField>
    <fullName>Trading_address_Street_N0__c</fullName>
    <label>Trading address Street N0</label>
    <length>255</length>
    <type>Text</type>
</CustomField>