elixir/force-app/main/default/objects/Account/fields/Trading_address_Street_Name__c.field-meta.xml
<CustomField>
    <fullName>Trading_address_Street_Name__c</fullName>
    <label>Trading address Street Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>