elixir/force-app/main/default/objects/Account/fields/Trading_address_Unit_No__c.field-meta.xml
<CustomField>
    <fullName>Trading_address_Unit_No__c</fullName>
    <label>Trading address Unit No</label>
    <length>255</length>
    <type>Text</type>
</CustomField>