elixir/force-app/main/default/objects/Account/fields/Trail__c.field-meta.xml
<CustomField>
    <fullName>Trail__c</fullName>
    <label>Trail</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>