elixir/force-app/main/default/objects/Account/fields/Trail_Amount__c.field-meta.xml
<CustomField>
    <fullName>Trail_Amount__c</fullName>
    <label>Trail Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>