elixir/force-app/main/default/objects/Account/fields/Trail_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Trail_Percentage__c</fullName>
    <label>Trail Percentage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>